--- a/index.html
+++ b/index.html
@@ -140,5 +140,6 @@
 </head>
   <body class="bg-light-bg text-light-text dark:bg-dark-bg dark:text-dark-text">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
